@@ -1,3 +1,8 @@
+2005-06-14  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-wp-info.c (gnome_wp_info_new): Revert undocumented, unapproved
+	change from Sebastian Bacher committed on 2005-05-22
+	
 2005-02-26  Rodney Dawes  <dobey@novell.com>
 
 	* *.[ch]: Update Copyright to include current year
